Fix small-caps not working on mobile browsers

--- a/assets/scss/typographical/_post.scss
+++ b/assets/scss/typographical/_post.scss
@@ -272,7 +272,8 @@
 }
 
 .small-caps, .post-content > p:first-of-type::first-line {
-  font-variant: all-small-caps;
+  font-variant: small-caps;
+  text-transform: lowercase;
   letter-spacing: 0.01em;
 }
 
